# NAYAN_PANDEY_2410030227_ONLINE-EXAM-PROCTOR-SYSTEM

./: app.py  config.py  pyproject.toml
static/: webcam.js
