[project]
name = "online-exam-proctor-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cmake>=4.3.0",
    "face-recognition>=1.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-session>=0.8.0",
    "flask-socketio>=5.6.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyjwt>=2.11.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.16.1",
    "requests>=2.32.5",
]
